manifests/base/payment/istio/destinationrule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: paymentservice
  namespace: paymentservice
spec:
  host: paymentservice.paymentservice.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
