manifests/base/payment/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: paymentservice
  namespace: paymentservice
spec:
  hosts:
    - paymentservice.paymentservice.svc.cluster.local
  http:
    - route:
        - destination:
            host: paymentservice.paymentservice.svc.cluster.local
            subset: v1
          weight: 90
        - destination:
            host: paymentservice.paymentservice.svc.cluster.local
            subset: v2
          weight: 10
